--- a/css/style.css
+++ b/css/style.css
@@ -97,7 +97,27 @@ aside#sx #notifications i{
 aside#sx #search-bar{
     height: 5%;
     background-color: #fafafa;
+    display: flex;
+    align-items: center;
+    padding: 4px;
 }
+#search-bar button{
+    width: 12%;
+    border: none;
+    background-color: white;
+    color: #c5c7c9;
+    height: 70%;
+    cursor: pointer;
+}
+#search-bar input{
+    width: 80%;
+    height: 70%;
+    border: none;
+    margin-right: 5px;
+    color: #c5c7c9;
+}
+
+
 aside#sx #contacts{
     height: 80%;
 }
