--- a/css/style.css
+++ b/css/style.css
@@ -63,6 +63,7 @@ aside#dx{
 .user-bar .user img{
     height: 40px;
     border-radius: 50%;
+    margin-right: 10px;
 }
 .text a{
     font-size: 12px;
@@ -72,8 +73,11 @@ aside#dx{
 .user-bar .icons{
     width: 30%;
     font-size: 24px;
-    text-align: center;
+    text-align: right;
     color: #b1b1b1;
+}
+.user-bar .icons i{
+    padding: 0 10px;
 }
 
 
@@ -121,9 +125,25 @@ aside#sx #search-bar{
 aside#sx #contacts{
     height: 80%;
 }
+#contacts .contact{
+    width: 100%;
+    padding: 10px;
+    border-top: 1px solid #f5f5f5;
+    display: flex;
+}
+#contacts .contact img{
+    height: 40px;
+    border-radius: 50%;
+    margin-right: 10px;
+}
+
 /*   conolla destra   */
 aside#dx .user-bar{
 border-left: 1px solid black;
+}
+#last-acces{
+    font-size: 12px;
+    color: #9da2a4;
 }
 aside#dx .main{
     height: 85%;
