--- a/css/style.css
+++ b/css/style.css
@@ -150,6 +150,21 @@ border-left: 1px solid #e3e3e3;
 aside#dx .main{
     height: 85%;
     background-image: url('../img/mine.jpg');
+    padding: 50px;
+}
+.sent,
+.recive{
+    padding: 10px;
+    width: 45%;
+    border-radius: 20px;
+    margin: 10px 0;
+}
+.sent{
+    float: right;
+    background-color: #d5f9ba;
+}
+.recive{
+    background-color: #ffffff;
 }
 
 aside#dx .footer-bar{
@@ -172,7 +187,7 @@ aside#dx .footer-bar .contI{
     text-align: center;
 }
 aside#dx .footer-bar i{
-font-size: 20px;
+font-size: 28px;
 text-align: center;
 }
 
