--- a/css/style.css
+++ b/css/style.css
@@ -154,7 +154,7 @@ aside#dx .main{
 }
 .sent,
 .recive{
-    padding: 10px;
+    padding: 17px 10px 5px;
     width: 45%;
     border-radius: 20px;
     margin: 10px 0;
@@ -165,6 +165,11 @@ aside#dx .main{
 }
 .recive{
     background-color: #ffffff;
+}
+.mex-Date{
+    text-align: right;
+    font-size: 10px;
+    color: #c1d0ba;
 }
 
 aside#dx .footer-bar{
