--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,7 @@
 }
 
 body{
-    font-family: 'Nunito', sans-serif;
+    font-family: 'Lato', sans-serif;
 }
 /* *** HEADER *** */
 
@@ -59,7 +59,7 @@ aside#dx{
     align-items: center;
 }
 .user-bar .user img{
-    height: 40px;
+    height: 30px;
     border-radius: 50%;
     margin-right: 10px;
 }
@@ -126,13 +126,16 @@ aside#sx #contacts{
     height: 80%;
     overflow-y: auto;
 }
-#contacts .contact{
+.contact{
     width: 100%;
     padding: 10px;
     border-top: 1px solid #f5f5f5;
     display: flex;
 }
-#contacts .contact img{
+.contact:hover{
+    background-color: #e9ebeb;
+}
+.contact img{
     height: 40px;
     border-radius: 50%;
     margin-right: 10px;
@@ -153,7 +156,7 @@ aside#dx .main{
     overflow-y: auto;
 }
 .sent,
-.recive{
+.received{
     padding: 17px 10px 5px;
     width: 45%;
     border-radius: 20px;
@@ -163,7 +166,7 @@ aside#dx .main{
     float: right;
     background-color: #d5f9ba;
 }
-.recive{
+.received{
     background-color: #ffffff;
 }
 .mex-Date{
